objects/Migration_Job__c.object
<CustomObject>
    <fields>
        <fullName>Base_Object_Migration_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Base Object Migration Rule</label>
        <referenceTo>Migration_Rule__c</referenceTo>
        <relationshipLabel>Migration Jobs</relationshipLabel>
        <relationshipName>Migration_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>List_View_Id__c</fullName>
        <label>List View Id</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Email_Address__c</fullName>
        <label>Notification Email Address</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Org Credential</label>
        <referenceTo>Settings__c</referenceTo>
        <relationshipLabel>Migration Jobs</relationshipLabel>
        <relationshipName>Migration_Jobs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Send_Notification_Email_On_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Notification Email On Complete</label>
        <type>Checkbox</type>
    </fields>
    <label>Migration Job</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Migration Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Migration Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>